# diamondhacks-2026

./: .gitignore  CLAUDE.md  README.md  fake_browser_use.py  log.json  main.py  pipeline.py  report.html  server.py
.superset/: config.json
backend/: .env.example  main.py  models.py  personas.py  pipeline.py  pyproject.toml  scoring.py
extension/: background.js  content.js  manifest.json  sidepanel.html  sidepanel.js
extension/panel/: panel.css  panel.html  panel.js
extension/popup/: popup.css  popup.html  popup.js
