[project]
name = "agentux"
version = "0.1.0"
description = "AI-powered usability testing platform using Browser Use agents"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",
    "pydantic>=2.0.0",
    "langchain-google-genai>=2.0.0",
]

[tool.setuptools]
py-modules = ["main", "pipeline", "personas", "scoring", "models"]
